# code-opt-csn

./: .gitignore  Code optimation.pptx  Code-Optimization.md  Code-Optimization.txt  Code-optimization-slides.pptx  README.md
branchless_examples/: CMakeLists.txt  branchless.cpp
loop_unrolling_examples/: Makefile  example.cpp
open_mp_examples_cxx/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  main.cpp
simd_examples_cxx/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  main.cpp  sum.cpp  sum.hpp
